--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <div class="interests container">
 
       <div class="section-title">
-        <h2>Interests</h2>
+        <h2>Intereses</h2>
       </div>
 
       <div class="row">
@@ -160,7 +160,7 @@
             <h3>Ubuntu</h3>
           </div>
         </div>
-      </div>
+      </div>Interesos
 
     </div><!-- End Interests -->
   </section><!-- End About Section -->
