--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
         <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-share-alt"></i>
-            <h3>Social Profiles</h3>
+            <h3>Perfiles Sociales</h3>
             <div class="social-links">
               <a href="https://www.linkedin.com/in/jaume-cadafalch-2260651a4" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               <a href="https://github.com/jcadafalch" target="_blank" class="github"><i class="bx bxl-github"></i></a>
