--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <!-- Google Tag Manager -->
@@ -64,7 +64,7 @@
     <div class="container">
 
       <h1><a href="index.html">Jaume Cadafalch</a></h1>
-      <h2 style="color:#fff">I'm <span class="typing" style="color:#12D640"></span></h2>
+      <h2 style="color:#fff">Soy <span class="typing" style="color:#12D640"></span></h2>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="#header"> <span>Inicio</span></a></li>
@@ -77,6 +77,9 @@
           <!--<li><a href="https://drive.google.com/file/d/1KQTdX3TeigHwbWjrR1VAJyQGDjH2xe35/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>-->
           <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
           <li><a href="#contacts"> <span>Contacto</span></a></li>
+          <li><a href="index_ca.html" style="font-size:14px"><span>ca</span></a></li>
+          <li><a href="index.html" style="font-size:14px"><span>es</span></a></li>
+          <li><a href="index_en.html" style="font-size:14px"> <span>en</span></a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -118,7 +121,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Fecha de nacimiento:</strong> 28 Marzo 2002</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Ciudad:</strong> Terrassa, Barcelona, España</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Ciudad:</strong> Terrassa, España</li>
               </ul>
             </div>
             <div class="col-lg-6">
@@ -137,7 +140,7 @@
     <div class="interests container">
 
       <div class="section-title">
-        <h2>Intereses</h2>
+        <h2>Interests</h2>
       </div>
 
       <div class="row">
@@ -160,7 +163,7 @@
             <h3>Ubuntu</h3>
           </div>
         </div>
-      </div>Interesos
+      </div>
 
     </div><!-- End Interests -->
   </section><!-- End About Section -->
@@ -322,7 +325,7 @@
   <section id="experience" class="services">
     <div class="container">
       <div class="section-title">
-        <h2>Experiencia</h2>
+        <h2>Experience</h2>
       </div>
       <div class="row">
           <div class="col-lg-12" data-aos="fade-up">
@@ -336,7 +339,7 @@
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                 <h4 style="text-align:left;"><a href="https://codelearn.cat/terrassa/" target="_blank" style="color:#12d640">Codelearn</a><br> </h4>
-                <h5 style="text-align:left;">Junio 2020 - Julio 2020</h5>
+                <h5 style="text-align:left;">May 2018 - June 2018</h5>
                 <p style="text-align:left;color:#fff"><em>Profesor de informática, Terrassa, España </em></p>
                 <ul style="text-align:left;">
                   <li>Profesor a cargo de un grupo de 3 a 15 alumnos con edades entre 6 y 17 años.</li>
@@ -598,11 +601,14 @@
         <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-share-alt"></i>
-            <h3>Perfiles Sociales</h3>
+            <h3>Social Profiles</h3>
             <div class="social-links">
               <a href="https://www.linkedin.com/in/jaume-cadafalch-2260651a4" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               <a href="https://github.com/jcadafalch" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-              <a href="mailto:jaumecadafalchmiro@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
+              <a href="https://www.instagram.com/jaumecadafalch/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+              <a href="https://www.facebook.com/profile.php?id=100006049759233" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+              <a href="https://twitter.com/JaumeCadafalch" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
+              <a href="https://www.t.me/palmopalmo02" target="_blank" class="telegram"><i class="bx bxl-telegram"></i></a>
 
             </div>
           </div>
@@ -643,7 +649,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Coder", "Developer", "Networks Enthusiast"],
+      strings: ["Programador", "Desarrollador", "Entusiasta de las redes"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
