--- a/index_en.html
+++ b/index_en.html
@@ -205,7 +205,7 @@
             <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
               <img src="assets/img/education/inscopernic.png" class="img-fluid" alt="">
               <h4 style="text-align:left;"><a href="https://copernic.cat/" target="_blank" style="color:#fff">Institute Nicolau Copernic</a><br> </h4>
-              <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>CMiddle Degree Formative Cycle</em></p>
+              <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>Middle Degree Formative Cycle</em></p>
               <h5 style="text-align:left;padding: 0px 10px;">September 2028 - June 2020</h5>
               <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Microcomputer Systems and Networks</h6>
               <ul style="text-align:left;color:#fff;">
