--- a/index.html
+++ b/index.html
@@ -509,13 +509,13 @@
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="background:#fff">
             <h4 style="text-align:left;color:#09203a">Lenguajes de programación y bases de datos</h4>
                 <p style="text-align:left;">
-                  <img src="https://www.vectorlogo.zone/logos/java/java-horizontal.svg" alt="vectorlogo.zone" height="50" width="120">
-                  <img src="https://www.vectorlogo.zone/logos/w3_html5/w3_html5-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/CSS3_logo_and_wordmark.svg" alt="upload.wikimedia.org" height="60" width="90">
-                  <img src="https://www.vectorlogo.zone/logos/mysql/mysql-horizontal.svg" alt="vectorlogo.zone" height="70" width="130">
-                  <img src="https://www.vectorlogo.zone/logos/mongodb/mongodb-ar21.svg" alt="vectorlogo.zone" height="50" width="190">
-                  <img src="https://www.vectorlogo.zone/logos/w3c_xml/w3c_xml-ar21.svg" alt="vectorlogo.zone" height="50" width="190">
-                  <img src="https://www.vectorlogo.zone/logos/php/php-ar21.svg" alt="vectorlogo.zone" height="50" width="190">
+                  <a href="https://www.java.com/"><img src="https://www.vectorlogo.zone/logos/java/java-horizontal.svg" alt="vectorlogo.zone" height="50" width="120"></a>
+                  <a href="https://html.spec.whatwg.org/"><img src="https://www.vectorlogo.zone/logos/w3_html5/w3_html5-ar21.svg" alt="vectorlogo.zone"></a>
+                  <a href="https://www.w3.org/Style/CSS/"><img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/CSS3_logo_and_wordmark.svg" alt="upload.wikimedia.org" height="60" width="90"></a>
+                  <a href="https://www.mysql.com/"><img src="https://www.vectorlogo.zone/logos/mysql/mysql-horizontal.svg" alt="vectorlogo.zone" height="50" width="190"></a>
+                  <a href="https://www.mongodb.com/"><img src="https://www.vectorlogo.zone/logos/mongodb/mongodb-ar21.svg" alt="vectorlogo.zone" height="50" width="190"></a>
+                  <a href="https://www.xml.com/"><img src="https://www.vectorlogo.zone/logos/w3c_xml/w3c_xml-ar21.svg" alt="vectorlogo.zone" height="50" width="190"></a>
+                  <a href="https://www.php.net/"><img src="https://www.vectorlogo.zone/logos/php/php-ar21.svg" alt="vectorlogo.zone" height="50" width="190"></a>
 
                 </p>
             </div>
