--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <div class="interests container">
 
       <div class="section-title">
-        <h2>Interests</h2>
+        <h2>Intereses</h2>
       </div>
 
       <div class="row">
@@ -325,7 +325,7 @@
   <section id="experience" class="services">
     <div class="container">
       <div class="section-title">
-        <h2>Experience</h2>
+        <h2>Experiencia</h2>
       </div>
       <div class="row">
           <div class="col-lg-12" data-aos="fade-up">
@@ -339,7 +339,7 @@
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                 <h4 style="text-align:left;"><a href="https://codelearn.cat/terrassa/" target="_blank" style="color:#12d640">Codelearn</a><br> </h4>
-                <h5 style="text-align:left;">May 2018 - June 2018</h5>
+                <h5 style="text-align:left;">Junio 2020 - Julio 2020</h5>
                 <p style="text-align:left;color:#fff"><em>Profesor de informática, Terrassa, España </em></p>
                 <ul style="text-align:left;">
                   <li>Profesor a cargo de un grupo de 3 a 15 alumnos con edades entre 6 y 17 años.</li>
