--- a/index_ca.html
+++ b/index_ca.html
@@ -109,10 +109,14 @@
           <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <p>Estudiant de cicle formatiu grau superior en Desenvolupament d'Aplicacions Multiplataforma i tècnic en Sistemes Microinformàtics i Xarxes que busca continuar formant-se en el món de la programació. En un futur m'agradaria estudiar els altres dos graus superiors (Desenvolupament d'Aplicacions Web i Administració de Sistemes Informàtics en Xarxa).
+          <p>Estudiant de cicle formatiu grau superior en Desenvolupament d'Aplicacions Multiplataforma i tècnic en Sistemes Microinformàtics i Xarxes que busca continuar 
+            formant-se en el món de la programació. 
+            En un futur m'agradaria seguir formant-me, estudiant els graus superiors <i>Desenvolupament d'Aplicacions Web</i> i <i>Administració de Sistemes Informàtics 
+            en Xarxa</i>.
           </p>
           <p>
-            Sóc una persona responsable, educada i treballadora que el que cerca és intentar guanyar experiència per a poder continuar adquirint coneixements i formar-se com a futur informàtic i programador.
+            Sóc una persona responsable, educada i treballadora que el que cerca és intentar guanyar experiència per a poder continuar adquirint coneixements 
+            i formar-se com a futur informàtic i programador.
           </p>
           <div class="row">
             <div class="col-lg-6">
