--- a/index_en.html
+++ b/index_en.html
@@ -110,11 +110,13 @@
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>
-            Student of an Upper Degree Forming Cycle in Developing Multi-platform Applications and Microcomputer Systems And Networks Technician who seeks to continue training in the world of programming. In the future I would like to study the other two Higher Technicians (Developing Web Aplications and Computer Systems and Networks Administration).
+            Student of an Upper Degree Formative Cycle in Cross-platform Application Development and Technician in Microcomputer Systems and Networks who seeks to 
+            continue training in the world of programming. In the future I would like to continue training, studying the higher degrees: 
+            <i>Web Application Development</i> and <i>Administration of Networked Computer Systems.</i>.
           </p>
           <p>
-            I am a responsible, educated and hard-working person who is looking to try to gain experience in order to continue
-           acquiring knowledge and training as a future computer technician and programmer.
+            I am a responsible, educated and hardworking person who seeks to try to gain experience in order 
+            to continue acquiring knowledgee and training as a future computer technician and programmer.
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -146,7 +148,7 @@
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
             <i class="ri-global-line" style="color: #ffbb2c;"></i>
-            <h3>Development of Software</h3>
+            <h3>Software Development</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
@@ -181,36 +183,36 @@
 
             <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
               <img src="assets/img/education/inscopernic.png" class="img-fluid" alt="">
-              <h4 style="text-align:left;"><a href="https://copernic.cat/" target="_blank" style="color:#fff">Institute Nicolau Copernic</a><br> </h4>
-              <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>Upper Degree Forming Cycle</em></p>
+              <h4 style="text-align:left;"><a href="https://copernic.cat/" target="_blank" style="color:#fff">Nicolau Copernic Institute</a><br> </h4>
+              <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>Higher Degree Training Cycle</em></p>
               <h5 style="text-align:left;padding: 0px 10px;">September 2020 - Present</h5>
-              <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Developing Multi-platform Applications</h6>
+              <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Cross-platform Application Development</h6>
               <ul style="text-align:left;color:#fff;">
                 <li>Computer Systems</li>
                 <li>Databases [MySQL and MongoDB]</li>
-                <li>Programming in Java</li>
-                <li>Markup Languages and Information Management Systems</li>
-                <li>Development Computer Environments</li>
-                <li>Access Data</li>
-                <li>Interface Development</li>
-                <li>Multimedia Program and Mobile Devices</li>
-                <li>Services and Process Programming</li>
+                <li>Java Programming</li>
+                <li>Brand Languages and Information Management Systems</li>
+                <li>Development Environments</li>
+                <li>Access to Data</li>
+                <li>Development of Interfaces</li>
+                <li>Multimedia Programming and Mobile Devices</li>
+                <li>Programming Services and Process</li>
                 <li>Business Management Systems</li>
-                <li>Multi-platform application development project</li>
-                <li>Training and Work Orientation</li>
-                <li>Enterprise and enterprise</li>
-                <li>Work Center Training</li>
+                <li>Cross-platform application development project</li>
+                <li>Training and Career Guidance</li>
+                <li>Business and Entrepreneurship</li>
+                <li>Training in Workplaces</li>
               </ul>
             </div>
             <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
               <img src="assets/img/education/inscopernic.png" class="img-fluid" alt="">
-              <h4 style="text-align:left;"><a href="https://copernic.cat/" target="_blank" style="color:#fff">Institute Nicolau Copernic</a><br> </h4>
-              <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>Middle Degree Formative Cycle</em></p>
+              <h4 style="text-align:left;"><a href="https://copernic.cat/" target="_blank" style="color:#fff">Nicolau Copernic Institute</a><br> </h4>
+              <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>Intermediate Degree Training Cycle</em></p>
               <h5 style="text-align:left;padding: 0px 10px;">September 2028 - June 2020</h5>
               <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Microcomputer Systems and Networks</h6>
               <ul style="text-align:left;color:#fff;">
-                <li>Build and maintain computer equipment</li>
-                <li>Monosite operating systems</li>
+                <li>Assembly and Maintenance of Equipment</li>
+                <li>Single-Place Operating Systems</li>
                 <li>Office Applications</li>
                 <li>Network Operating Systems</li>
                 <li>Local Networks</li>
@@ -218,10 +220,10 @@
                 <li>Network Services</li>
                 <li>Web Applications</li>
                 <li>Technical English</li>
-                <li>Microinformatics and Network Project</li>
-                <li>Training and Work Orientation</li>
-                <li>Training and career labor</li>
-                <li>Work Center Training</li>
+                <li>-Project of Microcomputer Systems and Networks</li>
+                <li>Training and Career Guidance</li>
+                <li>Business and Entrepreneurship</li>
+                <li>Training in Workplaces</li>
               </ul>
             </div>
           </div>
@@ -331,9 +333,9 @@
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                 <h4 style="text-align:left;"><a href="https://www.casadellibro.com/nosotros/tienda/carrer-cremat-15/36" style="color:#12d640">Casa del libro</a><br> </h4>
                 <h5 style="text-align:left;">April 2021 -  April 2021</h5>
-                <p style="text-align:left;color:#fff"><em>Book seller, Terrassa, Spain </em></p>
+                <p style="text-align:left;color:#fff"><em>Bookseller, Terrassa, Spain </em></p>
                 <ul style="text-align:left;">
-                  </li><li>Sales and promotion of books at street stop on Sant Jordi Day</li>
+                  <li>Sales and promotion of books at street level stop in the day of Sant Jordi </li>
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
@@ -350,9 +352,9 @@
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                 <h4 style="text-align:left;"><a href="https://www.casadellibro.com/nosotros/tienda/carrer-cremat-15/36" style="color:#12d640">Casa del libro</a><br> </h4>
                 <h5 style="text-align:left;">April 2019 -  April 2019</h5>
-                <p style="text-align:left;color:#fff"><em>Book seller, Terrassa, Spain </em></p>
+                <p style="text-align:left;color:#fff"><em>Bookseller, Terrassa, Spain </em></p>
                 <ul style="text-align:left;">
-                  <li>Sales and promotion of books at street stop on Sant Jordi Day</li>
+                   <li>Sales and promotion of books at street level stop in the day of Sant Jordi </li>
                 </ul>
               </div>
           </div>
