--- a/index_ca.html
+++ b/index_ca.html
@@ -116,7 +116,7 @@
           </p>
           <p>
             Sóc una persona responsable, educada i treballadora que el que cerca és intentar guanyar experiència per a poder continuar adquirint coneixements 
-            i formar-se com a futur informàtic i programador.
+            i formar-se com a futur tècnic informàtic i programador.
           </p>
           <div class="row">
             <div class="col-lg-6">
