--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           </p>
           <p>
             Soy una persona responsable, educada y trabajadora que lo que busca es intentar ganar experiencia para poder seguir
-           adquiriendo conocimientos y formarse como futuro técnico informático  y programador.
+           adquiriendo conocimientos, formándose como futuro técnico informático  y programador.
           </p>
           <div class="row">
             <div class="col-lg-6">
