--- a/index_en.html
+++ b/index_en.html
@@ -116,7 +116,7 @@
           </p>
           <p>
             I am a responsible, educated and hardworking person who seeks to try to gain experience in order 
-            to continue acquiring knowledgee and training as a future computer technician and programmer.
+            to continue acquiring knowledgee, training as a future computer technician and programmer.
           </p>
           <div class="row">
             <div class="col-lg-6">
