--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Personal Portfolio</title>
+  <title>Jcadafalch Portfolio</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -508,16 +508,16 @@
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="background:#fff">
             <h4 style="text-align:left;color:#09203a">Lenguajes de programación y bases de datos</h4>
-                <p style="text-align:left;">
-                  <a href="https://www.java.com/"><img src="https://www.vectorlogo.zone/logos/java/java-horizontal.svg" alt="vectorlogo.zone" height="50" width="120"></a>
-                  <a href="https://html.spec.whatwg.org/"><img src="https://www.vectorlogo.zone/logos/w3_html5/w3_html5-ar21.svg" alt="vectorlogo.zone"></a>
-                  <a href="https://www.w3.org/Style/CSS/"><img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/CSS3_logo_and_wordmark.svg" alt="upload.wikimedia.org" height="60" width="90"></a>
-                  <a href="https://www.mysql.com/"><img src="https://www.vectorlogo.zone/logos/mysql/mysql-horizontal.svg" alt="vectorlogo.zone" height="50" width="190"></a>
-                  <a href="https://www.mongodb.com/"><img src="https://www.vectorlogo.zone/logos/mongodb/mongodb-ar21.svg" alt="vectorlogo.zone" height="50" width="190"></a>
-                  <a href="https://www.xml.com/"><img src="https://www.vectorlogo.zone/logos/w3c_xml/w3c_xml-ar21.svg" alt="vectorlogo.zone" height="50" width="190"></a>
-                  <a href="https://www.php.net/"><img src="https://www.vectorlogo.zone/logos/php/php-ar21.svg" alt="vectorlogo.zone" height="50" width="190"></a>
+            <p style="text-align:left;">
+              <a href="https://www.java.com/"><img src="https://www.vectorlogo.zone/logos/java/java-horizontal.svg" alt="vectorlogo.zone" height="50" width="120"></a>
+              <a href="https://html.spec.whatwg.org/"><img src="https://www.vectorlogo.zone/logos/w3_html5/w3_html5-ar21.svg" alt="vectorlogo.zone"></a>
+              <a href="https://www.w3.org/Style/CSS/"><img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/CSS3_logo_and_wordmark.svg" alt="upload.wikimedia.org" height="60" width="90"></a>
+              <a href="https://www.mysql.com/"><img src="https://www.vectorlogo.zone/logos/mysql/mysql-horizontal.svg" alt="vectorlogo.zone" height="70" width="130"></a>
+               <a href="https://www.mongodb.com/"><img src="https://www.vectorlogo.zone/logos/mongodb/mongodb-ar21.svg" alt="vectorlogo.zone" height="70" width="130"></a>
+               <a href="https://www.xml.com/"><img src="https://www.vectorlogo.zone/logos/w3c_xml/w3c_xml-ar21.svg" alt="vectorlogo.zone" height="70" width="130"></a>
+               <a href="https://www.php.net/"><img src="https://www.vectorlogo.zone/logos/php/php-ar21.svg" alt="vectorlogo.zone" height="50" width="190"></a>
 
-                </p>
+            </p>
             </div>
             <!--<div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100" style="background:#fff">
               <h4 style="text-align:left;color:#09203a">Frameworks</h4>
@@ -649,7 +649,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Programador", "Desarrollador", "Entusiasta de las redes"],
+      strings: ["Programador", "Técnico en Sistemas Microinformáticos y Redes", "Entusiasta de las redes"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
