--- a/index_en.html
+++ b/index_en.html
@@ -13,7 +13,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Personal Portfolio</title>
+  <title>Jcadafalch Portfolio</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -110,7 +110,7 @@
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>
-            Student of an Upper Degree Formative Cycle in Cross-platform Application Development and Technician in Microcomputer Systems and Networks who seeks to 
+            Student of an Upper Degree Formative Cycle in Cross-platform Application Development and Microcomputer Systems and Network Technician who seeks to 
             continue training in the world of programming. In the future I would like to continue training, studying the higher degrees: 
             <i>Web Application Development</i> and <i>Administration of Networked Computer Systems.</i>.
           </p>
@@ -513,9 +513,9 @@
                   <a href="https://www.java.com/"><img src="https://www.vectorlogo.zone/logos/java/java-horizontal.svg" alt="vectorlogo.zone" height="50" width="120"></a>
                   <a href="https://html.spec.whatwg.org/"><img src="https://www.vectorlogo.zone/logos/w3_html5/w3_html5-ar21.svg" alt="vectorlogo.zone"></a>
                   <a href="https://www.w3.org/Style/CSS/"><img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/CSS3_logo_and_wordmark.svg" alt="upload.wikimedia.org" height="60" width="90"></a>
-                  <a href="https://www.mysql.com/"><img src="https://www.vectorlogo.zone/logos/mysql/mysql-horizontal.svg" alt="vectorlogo.zone" height="50" width="190"></a>
-                  <a href="https://www.mongodb.com/"><img src="https://www.vectorlogo.zone/logos/mongodb/mongodb-ar21.svg" alt="vectorlogo.zone" height="50" width="190"></a>
-                  <a href="https://www.xml.com/"><img src="https://www.vectorlogo.zone/logos/w3c_xml/w3c_xml-ar21.svg" alt="vectorlogo.zone" height="50" width="190"></a>
+                  <a href="https://www.mysql.com/"><img src="https://www.vectorlogo.zone/logos/mysql/mysql-horizontal.svg" alt="vectorlogo.zone" height="70" width="130"></a>
+                  <a href="https://www.mongodb.com/"><img src="https://www.vectorlogo.zone/logos/mongodb/mongodb-ar21.svg" alt="vectorlogo.zone" height="70" width="130"></a>
+                  <a href="https://www.xml.com/"><img src="https://www.vectorlogo.zone/logos/w3c_xml/w3c_xml-ar21.svg" alt="vectorlogo.zone" height="70" width="130"></a>
                   <a href="https://www.php.net/"><img src="https://www.vectorlogo.zone/logos/php/php-ar21.svg" alt="vectorlogo.zone" height="50" width="190"></a>
 
                 </p>
@@ -649,7 +649,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Coder", "Developer", "Networks Enthusiast"],
+      strings: ["Coder", "Microcomputer Systems and Network Technician", "Networks Enthusiast"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
