--- a/training/BasicLifeSupportRC.html
+++ b/training/BasicLifeSupportRC.html
@@ -50,6 +50,7 @@
             <h2 style="color:#12d640">Basic Life Support</h2>
             <ul>
               <li><strong>Teaching</strong>: Terrassa Red Cross</li>
+              <li><strong>Date</strong>: 14/07/2021 - 15/07/2021</li>
               <li><strong>Website</strong>: <a
                   href="http://www.creuroja.org/AP/CM/135P171/Assemblea_Terrassa.aspx?tmp=951" target="_blank">Link</a>
               </li>
