--- a/training/FA_coTerrassa.html
+++ b/training/FA_coTerrassa.html
@@ -50,6 +50,7 @@
             <h2 style="color:#12d640">Citizen training in first aid and use of defibrillators</h2>
             <ul>
               <li><strong>Teaching</strong>: Terrassa town hall</li>
+              <li><strong>Date</strong>: 10/06/2021</li>
               <li><strong>Website</strong>: <a
                   href="http://www.creuroja.org/AP/CM/135P171/Assemblea_Terrassa.aspx?tmp=951" target="_blank">Link</a>
               </li>
