--- a/training/PA_ajTerrassa.html
+++ b/training/PA_ajTerrassa.html
@@ -50,6 +50,7 @@
             <h2 style="color:#12d640">Formació ciutadana en primers auxilis i ús de desfibril·ladors</h2>
             <ul>
               <li><strong>Impartició</strong>: Ajuntament Terrassa</li>
+              <li><strong>Data</strong>: 10/06/2021</li>
               <li><strong>Lloc Web</strong>: <a
                   href="https://www.terrassa.cat/formacio-ciutadana-en-primers-auxilis-i-us-de-desfibril-ladors"
                   target="_blank">Enllaç</a></li>
