--- a/training/PrimerAuxilisBasics_CR.html
+++ b/training/PrimerAuxilisBasics_CR.html
@@ -50,6 +50,7 @@
             <h2 style="color:#12d640">Primers Auxilis Bàsics</h2>
             <ul>
               <li><strong>Impartició</strong>: Creu Roja Terrassa</li>
+              <li><strong>Data</strong>: 14/07/2021 - 15/07/2021</li>
               <li><strong>Lloc Web</strong>: <a
                   href="http://www.creuroja.org/AP/CM/135P171/Assemblea_Terrassa.aspx?tmp=951"
                   target="_blank">Enllaç</a></li>
