--- a/training/PrimerosAuxiliosBasicosCR.html
+++ b/training/PrimerosAuxiliosBasicosCR.html
@@ -50,6 +50,7 @@
             <h2 style="color:#12d640">Primeros Auxilios Básicos</h2>
             <ul>
               <li><strong>Impartición</strong>: Cruz Roja Terrassa</li>
+              <li><strong>Fecha</strong>: 14/07/2021 - 15/07/2021</li>
               <li><strong>Sitio Web</strong>: <a
                   href="http://www.creuroja.org/AP/CM/135P171/Assemblea_Terrassa.aspx?tmp=951"
                   target="_blank">Enlace</a></li>
