--- a/training/WorkCenterTraining.html
+++ b/training/WorkCenterTraining.html
@@ -1,10 +1,10 @@
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Formación ciudadana en primeros auxilios y uso de desfibriladores</title>
+    <title>Work Center Training [WCT]</title>
     <meta content="" name="descriptison">
     <meta content="" name="keywords">
 
@@ -47,57 +47,16 @@
 
                     <div class="col-lg-12 portfolio-info">
                         <br>
-                        <h2 style="color:#12d640">Formación ciudadana en primeros auxilios y uso de desfibriladores</h2>
+                        <h2 style="color:#12d640">Work Center Training [WCT]</h2>
                         <ul>
-                            <li><strong>Impartición</strong>: Ayuntamiento Terrassa</li>
-                            <li><strong>Fecha</strong>: 10/06/2021</li>
-                            <li><strong>Sitio Web</strong>: <a
-                                    href=https://www.terrassa.cat/es/formacio-ciutadana-en-primers-auxilis-i-us-de-desfibril-ladors
-                                    target="_blank">Enlace</a></li>
+                            <li><strong>Center</strong>: Codelearn Terrassa</li>
+                            <li><strong>Date</strong>: October 2019 - March 2020</li>
+                            <li><strong>Website</strong>: <a href="https://codelearn.cat/terrassa/"target="_blank">Enlace</a></li>
+                            <li><strong>Report</strong>: <a href="https://docs.google.com/document/d/1uPu93QQ37xcRnlxq-NtlNM8iSjiUVRbTI4d2C7AymHg/preview"
+                                target="_blank">English version not ready yet, link to Spanish version</a></li>
                         </ul>
-
-                        <p>
-                            Formación a cargo del Ayuntamiento de Terrassa, con el objetivo de dotar la ciudadanía
-                            participando de herramientas
-                            y recursos para identificar una situación de emergencia y saber como actuar. Entender y
-                            aplicar el concepto de prevención.
-                        </p><br>
-                        <p>
-                            <strong>
-                                <h4>Contenidos:</h4>
-                            </strong>
-                        <p>Introducción y cultura de la autoprotección (conceptos de peligro, autoprotección y
-                            prevención)</p>
-                        <p> - Como activar el sistema de emergencias y llamadas al 112.</p>
-
-                        </p><br>
-
-                        <p>
-                            <i>Situaciones de emergencia más frecuentes y su manejo:</i>><br>
-                        <ul>
-                            <li>PAS (Proteger, Avisar, Socorrer)</li>
-                            <li>Posición Lateral de Seguridad)</li>
-                            <li>SVB (Soporte Vital Básico)</li>
-                            <li>RCP (Reanimación Cardiopulmonar)</li>
-                            <li>OVACE (Obstrucción de la Vía Aérea por Cuerpo Extraño)</li>
-                            <li>DEA (Desfibrilación Externa Automatizada)</li>
-                        </ul>
-                        </p>
-
-                        <p>
-                            <strong>
-                                <h4>Metodología:</h4>
-                            </strong>
-                        <p>Exposición teórica y actividades prácticas de PAS, PLS, SVB, RCP, OVACE y DEA.</p>
-                        </p><br>
-
-                        <p>
-                            <strong>
-                                <h4>Duración:</h4>
-                            </strong>
-                        <p>Cuatro horas seguidas</p>
-                        </p><br>
-
+                        <p>NOTE: English version not ready yet, you can read Spanish version</p>
+                        <iframe src="https://docs.google.com/document/d/1uPu93QQ37xcRnlxq-NtlNM8iSjiUVRbTI4d2C7AymHg/preview" height="500px" width="100%"></iframe>
                     </div>
 
                 </div>
