--- a/index_ca.html
+++ b/index_ca.html
@@ -289,6 +289,22 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
+            <center>
+              <h4>Formació en Centre de Treball [FCT]</h4>
+            </center>
+            <div class="portfolio-wrap">
+              <img src="assets/img/education/codelearnLogo.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+
+                <div class="portfolio-links">
+                  <a href="training/FormacioCentreTreball.html" data-gall="portfolioDetailsGallery"
+                    data-vbtype="iframe" class="venobox" title="Detalls de la formació"><i
+                      class="bx bx-info-circle"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
