--- a/index_ca.html
+++ b/index_ca.html
@@ -130,7 +130,7 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>FData de naixement:</strong> 28 Març 2002</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Data de naixement:</strong> 28 Març 2002</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Ciutat:</strong> Terrassa, España</li>
               </ul>
             </div>
