--- a/index_ca.html
+++ b/index_ca.html
@@ -629,7 +629,7 @@
         <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-envelope"></i>
-            <h3>Correus Electrònics</h3>
+            <h3>Correu Electrònic</h3>
             <p>jaumecadafalchmiro@gmail.com</p>
           </div>
         </div>
